// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ipa2senyn: kai 1`] = `
Array [
  "k",
  "ai",
]
`;

exports[`ipa2senyn: m̩ 1`] = `
Array [
  "",
  "m̩",
]
`;

exports[`ipa2senyn: pã 1`] = `
Array [
  "p",
  "ã",
]
`;

exports[`ipa2senyn: ɿ 1`] = `
Array [
  "",
  "ɿ",
]
`;

exports[`query 1`] = `
Array [
  Object {
    "声": "tʃ",
    "调": 1,
    "释": "",
    "音": "tʃoŋ",
    "韵": "oŋ",
  },
  Object {
    "声": "tʃ",
    "调": 4,
    "释": "",
    "音": "tʃoŋ",
    "韵": "oŋ",
  },
]
`;
